--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <body>
   <h1>Santoso Budiman Profile</h1>
-        <h2>I am a professor and the Director for the Center of Innovation and Digital Transformation at the University of Texas at Arlington</h2>
+        <h2>I am a professor and the Director for the Center of Innovation and Digital Transformation </h2>
+        <h2>at the University of Texas at Arlington</h2>
         <a href="https://www.uta.edu/academics/faculty/profile?username=budimans"> <img src="./assets/images/santoso.JPG" height="200" alt="santoso"/> </a>
   <hr />
             <h3><a href="https://www.linkedin.com/in/santosobudiman/">Linkedin Profile</a></h3>
